# agentpulse

./: .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/agents/: route.ts
app/api/alerts/: route.ts
app/api/events/: route.ts
app/api/payments/: route.ts
app/api/stats/: route.ts
app/auth/callback/: route.ts
app/dashboard/: layout.tsx  page.tsx
app/dashboard/activity/: page.tsx
app/dashboard/agents/: page.tsx
app/docs/: page.tsx
app/login/: page.tsx
app/signup/: page.tsx
components/: mobile-nav.tsx
components/charts/: cost-chart.tsx  status-chart.tsx  token-chart.tsx
components/dashboard/: agent-card.tsx  date-range-selector.tsx  event-detail.tsx  event-log.tsx  recommendations.tsx  sidebar.tsx  stat-card.tsx
lib/: api-auth.ts  dashboard-cache.tsx  email.ts  pricing.ts  rate-limit.ts  supabase.ts  use-event-stream.ts  utils.ts
plugin/: .gitignore  README.md  install.sh  pyproject.toml
plugin-node/: package-lock.json  package.json  tsconfig.json
plugin-node/src/: cli.ts  config.ts  index.ts  pricing.ts  register.ts  sdk.ts
plugin/agentpulse/: __init__.py  __main__.py  _bootstrap_sitecustomize.py  cli.py  config.py  daemon.py  parser.py  proxy.py  sdk.py  sender.py
plugin/tests/: test_config.py  test_parser.py  test_sdk.py  test_sender.py
scripts/: generate-ph-images.mjs  test-event.sh
supabase/migrations/: 001_initial.sql  002_add_prompt_columns.sql  003_crypto_payments.sql  004_grant_premium_access.sql
(+16 files in other folders)
